[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/MenuManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Logo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Moon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/check.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Slider_highlighted.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Slider_tick.png" type="Texture" id=6]
[ext_resource path="res://Sprites/unchecked.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Tower.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.505882, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0509804, 0.168627, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.666667, 0.368627, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Font/PixelGameFont.ttf"

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Font/PixelGameFont.ttf"

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Font/PixelGameFont.ttf"

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = SubResource( 8 )

[sub_resource type="StyleBoxLine" id=10]
thickness = 10

[sub_resource type="StyleBoxLine" id=11]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.941176, 0.568627, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.168627, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -22.3639
margin_right = 100.0
margin_bottom = 52.6361
rect_pivot_offset = Vector2( 100, 37 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayText" type="RichTextLabel" parent="CanvasLayer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -15.0
margin_right = 50.0
margin_bottom = 15.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[wave]PLAY"
text = "PLAY"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -227.0
margin_top = 118.0
margin_right = -2.0
margin_bottom = 157.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[wave]Tower of Fera"
text = "Tower of Fera"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/Volume"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -89.782
margin_top = -148.492
margin_right = 210.218
margin_bottom = -54.4918
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 10 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
min_value = -20.0
max_value = 5.0
step = 0.001
value = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="CheckBox" parent="CanvasLayer/Volume"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -147.476
margin_top = -122.048
margin_right = -109.476
margin_bottom = -84.0475
rect_pivot_offset = Vector2( 19, 19 )
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Moon" type="TextureRect" parent="CanvasLayer"]
margin_right = 521.0
margin_bottom = 632.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
position = Vector2( -94.608, -127.098 )
scale = Vector2( 1, 1 )

[connection signal="tree_exited" from="." to="." method="_on_Menu_tree_exited"]
[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_exited" from="CanvasLayer/Volume/VolumeSlider" to="." method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="CanvasLayer/Volume/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Volume/Mute" to="." method="_on_Mute_pressed"]
